@@ -10,13 +10,10 @@
 #include "EventFilter/ResourceBroker/interface/FUResourceBroker.h"
 #include "EventFilter/ResourceBroker/interface/BUProxy.h"
 
-#include "EventFilter/Utilities/interface/RunBase.h"
 #include "EventFilter/Utilities/interface/Crc.h"
 
 #include "i2o/include/i2o/Method.h"
-
 #include "interface/shared/include/i2oXFunctionCodes.h"
-
 #include "xcept/include/xcept/tools.h"
 
 #include "toolbox/include/toolbox/mem/HeapAllocator.h"
@@ -46,17 +43,7 @@ using namespace evf;
 //______________________________________________________________________________
 FUResourceBroker::FUResourceBroker(xdaq::ApplicationStub *s)
   : xdaq::Application(s)
-  , workLoopConfiguring_(0)
-  , workLoopEnabling_(0)
-  , workLoopStopping_(0)
-  , workLoopHalting_(0)
-  , asConfiguring_(0)
-  , asEnabling_(0)
-  , asStopping_(0)
-  , asHalting_(0)
-  , rcmsStateNotifier_(getApplicationLogger(),
-		       getApplicationDescriptor(),
-		       getApplicationContext())
+  , fsm_(this)
   , lock_(BSem::FULL)
   , gui_(0)
   , log_(getApplicationLogger())
@@ -97,73 +84,8 @@ FUResourceBroker::FUResourceBroker(xdaq::ApplicationStub *s)
   , nbMeasurements_(0)
   , nbEventsLast_(0)
 {
-  //
-  // setup the finite state machine
-  //
-  
-  // action signatures
-  asConfiguring_ =
-    toolbox::task::bind(this,&FUResourceBroker::configuring,"configuring");
-  asEnabling_ =
-    toolbox::task::bind(this,&FUResourceBroker::enabling,"enabling");
-  asStopping_ =
-    toolbox::task::bind(this,&FUResourceBroker::stopping,"stopping");
-  asHalting_ =
-    toolbox::task::bind(this,&FUResourceBroker::halting,"halting");
-  
-  // work loops
-  workLoopConfiguring_ =
-    toolbox::task::getWorkLoopFactory()->getWorkLoop("RBConfiguring",
-						     "waiting");
-  workLoopEnabling_ =
-    toolbox::task::getWorkLoopFactory()->getWorkLoop("RBEnabling",
-						     "waiting");
-  workLoopStopping_ =
-    toolbox::task::getWorkLoopFactory()->getWorkLoop("RBStopping",
-						     "waiting");
-  workLoopHalting_ =
-    toolbox::task::getWorkLoopFactory()->getWorkLoop("RBHalting",
-						     "waiting");
-  
-  // bind SOAP callbacks
-  xoap::bind(this,&FUResourceBroker::fsmCallback,"Configure",XDAQ_NS_URI);
-  xoap::bind(this,&FUResourceBroker::fsmCallback,"Enable",   XDAQ_NS_URI);
-  xoap::bind(this,&FUResourceBroker::fsmCallback,"Stop",     XDAQ_NS_URI);
-  xoap::bind(this,&FUResourceBroker::fsmCallback,"Halt",     XDAQ_NS_URI);
-  xoap::bind(this,&FUResourceBroker::fsmCallback,"Suspend",  XDAQ_NS_URI);
-  xoap::bind(this,&FUResourceBroker::fsmCallback,"Resume",   XDAQ_NS_URI);
-  
-  // define finite state machine, states&transitions
-  fsm_.addState('h', "halting"    ,this,&FUResourceBroker::fsmStateChanged);
-  fsm_.addState('H', "Halted"     ,this,&FUResourceBroker::fsmStateChanged);
-  fsm_.addState('c', "configuring",this,&FUResourceBroker::fsmStateChanged);
-  fsm_.addState('R', "Ready"      ,this,&FUResourceBroker::fsmStateChanged);
-  fsm_.addState('e', "enabling"   ,this,&FUResourceBroker::fsmStateChanged);
-  fsm_.addState('E', "Enabled"    ,this,&FUResourceBroker::fsmStateChanged);
-  fsm_.addState('s', "stopping"   ,this,&FUResourceBroker::fsmStateChanged);
-  fsm_.addState('S', "Suspended"  ,this,&FUResourceBroker::fsmStateChanged);
-  
-  fsm_.addStateTransition('H', 'c', "Configure");
-  fsm_.addStateTransition('c', 'R', "ConfigureDone");
-  fsm_.addStateTransition('R', 'e', "Enable");
-  fsm_.addStateTransition('e', 'E', "EnableDone");
-  fsm_.addStateTransition('E', 's', "Stop");
-  fsm_.addStateTransition('s', 'R', "StopDone");
-  fsm_.addStateTransition('E', 'h', "Halt");
-  fsm_.addStateTransition('R', 'h', "Halt");
-  fsm_.addStateTransition('S', 'h', "Halt");
-  fsm_.addStateTransition('h', 'H', "HaltDone");
-  fsm_.addStateTransition('E', 'S', "Suspend",this,&FUResourceBroker::suspend);
-  fsm_.addStateTransition('S', 'E', "Resume" ,this,&FUResourceBroker::resume);
-  
-  fsm_.setInitialState('H');
-  fsm_.reset();
-  stateName_ = fsm_.getStateName(fsm_.getCurrentState());
-  
-  if (!workLoopConfiguring_->isActive()) workLoopConfiguring_->activate();
-  if (!workLoopEnabling_->isActive())    workLoopEnabling_   ->activate();
-  if (!workLoopStopping_->isActive())    workLoopStopping_   ->activate();
-  if (!workLoopHalting_->isActive())     workLoopHalting_    ->activate();
+  // setup finite state machine (binding relevant callbacks)
+  fsm_.initialize<evf::FUResourceBroker>(this);
   
   // set source id in evf::RunBase
   url_     =
@@ -171,9 +93,7 @@ FUResourceBroker::FUResourceBroker(xdaq::ApplicationStub *s)
     getApplicationDescriptor()->getURN();
   class_   =getApplicationDescriptor()->getClassName();
   instance_=getApplicationDescriptor()->getInstance();
-  
   sourceId_=class_.toString()+"_"+instance_.toString();
-  RunBase::sourceId_=sourceId_;
   
   // i2o callback for FU_TAKE messages from builder unit
   i2o::bind(this,
@@ -224,148 +144,25 @@ FUResourceBroker::~FUResourceBroker()
 ////////////////////////////////////////////////////////////////////////////////
 // implementation of member functions
 ////////////////////////////////////////////////////////////////////////////////
-
-//______________________________________________________________________________
-xoap::MessageReference FUResourceBroker::fsmCallback(xoap::MessageReference msg)
-  throw (xoap::exception::Exception)
-{
-  xoap::SOAPPart     part    =msg->getSOAPPart();
-  xoap::SOAPEnvelope env     =part.getEnvelope();
-  xoap::SOAPBody     body    =env.getBody();
-  DOMNode           *node    =body.getDOMNode();
-  DOMNodeList       *bodyList=node->getChildNodes();
-  DOMNode           *command =0;
-  string             commandName;
-  
-  for (UInt_t i=0;i<bodyList->getLength();i++) {
-    command = bodyList->item(i);
-    if(command->getNodeType() == DOMNode::ELEMENT_NODE) {
-      commandName = xoap::XMLCh2String(command->getLocalName());
-      break;
-    }
-  }
-  
-  if (commandName.empty()) {
-    XCEPT_RAISE(xoap::exception::Exception,"Command not found.");
-  }
-  
-  // fire appropriate event and create according response message
-  try {
-    toolbox::Event::Reference e(new toolbox::Event(commandName,this));
-    fsm_.fireEvent(e);
-    
-    // response string
-    xoap::MessageReference reply = xoap::createMessage();
-    xoap::SOAPEnvelope envelope  = reply->getSOAPPart().getEnvelope();
-    xoap::SOAPName responseName  = envelope.createName(commandName+"Response",
-						       "xdaq",XDAQ_NS_URI);
-    xoap::SOAPBodyElement responseElem =
-      envelope.getBody().addBodyElement(responseName);
-    
-    // state string
-    int               iState        = fsm_.getCurrentState();
-    string            state         = fsm_.getStateName(iState);
-    xoap::SOAPName    stateName     = envelope.createName("state",
-							  "xdaq",XDAQ_NS_URI);
-    xoap::SOAPElement stateElem     = responseElem.addChildElement(stateName);
-    xoap::SOAPName    attributeName = envelope.createName("stateName",
-							  "xdaq",XDAQ_NS_URI);
-    stateElem.addAttribute(attributeName,state);
-    
-    return reply;
-  }
-  catch (toolbox::fsm::exception::Exception & e) {
-    XCEPT_RETHROW(xoap::exception::Exception,"invalid command.",e);
-  }	
-}
-
-
-//______________________________________________________________________________
-void FUResourceBroker::fsmStateChanged(toolbox::fsm::FiniteStateMachine & fsm) 
-  throw (toolbox::fsm::exception::Exception)
-{
-  stateName_   = fsm_.getStateName(fsm_.getCurrentState());
-  string state = stateName_.toString();
-  
-  LOG4CPLUS_INFO(log_,"New state is: "<<state);
-  
-  if (state=="configuring") {
-    try {
-      workLoopConfiguring_->submit(asConfiguring_);
-    }
-    catch (xdaq::exception::Exception& e) {
-      LOG4CPLUS_ERROR(log_,xcept::stdformat_exception_history(e));
-    }
-  }
-  else if (state=="enabling") {
-    try {
-      workLoopEnabling_->submit(asEnabling_);
-    }
-    catch (xdaq::exception::Exception& e) {
-      LOG4CPLUS_ERROR(log_,xcept::stdformat_exception_history(e));
-    }
-  }
-  else if (state=="stopping") {
-    try {
-      workLoopStopping_->submit(asStopping_);
-    }
-    catch (xdaq::exception::Exception& e) {
-      LOG4CPLUS_ERROR(log_,xcept::stdformat_exception_history(e));
-    }
-  }
-  else if (state=="halting") {
-    try {
-      workLoopHalting_->submit(asHalting_);
-    }
-    catch (xdaq::exception::Exception& e) {
-      LOG4CPLUS_ERROR(log_,xcept::stdformat_exception_history(e));
-    }
-  }
-  else if (state=="Halted"||state=="Ready"||state=="Enabled") {
-    try {
-      rcmsStateNotifier_.stateChanged(state,
-				      "ResourceBroker has reached target state " +
-				      state);
-    }
-    catch (xcept::Exception& e) {
-      LOG4CPLUS_ERROR(log_,"Failed to notify state change: "
-		      <<xcept::stdformat_exception_history(e));
-    }
-  }
-}
-
-//______________________________________________________________________________
-void FUResourceBroker::suspend(toolbox::Event::Reference e)
-  throw (toolbox::fsm::exception::Exception)
-{
-  lock_.take();
-  LOG4CPLUS_INFO(log_,"FUResourceBroker -> SUSPENDED <-");
-}
-
-
-//______________________________________________________________________________
-void FUResourceBroker::resume(toolbox::Event::Reference e)
-  throw (toolbox::fsm::exception::Exception)
-{
-  lock_.give();
-  LOG4CPLUS_INFO(log_,"FUResourceBroker -> RESUMED <-");
-}
-
    
 //______________________________________________________________________________
 bool FUResourceBroker::configuring(toolbox::task::WorkLoop* wl)
 {
-  LOG4CPLUS_INFO(log_, "Start configuring ...");
-  rcmsStateNotifier_.findRcmsStateListener();
-  connectToBUs();
-  resourceTable_=new FUResourceTable(queueSize_,eventBufferSize_,shmMode_,
-				     bu_[buInstance_],log_);
-  resourceTable_->resetCounters();
-  reset();
-  LOG4CPLUS_INFO(log_, "Finished configuring!");
-  
-  toolbox::Event::Reference e(new toolbox::Event("ConfigureDone",this));
-  fsm_.fireEvent(e);
+  try {
+    LOG4CPLUS_INFO(log_, "Start configuring ...");
+    connectToBUs();
+    resourceTable_=new FUResourceTable(queueSize_,eventBufferSize_,shmMode_,
+				       bu_[buInstance_],log_);
+    resourceTable_->resetCounters();
+    reset();
+    LOG4CPLUS_INFO(log_, "Finished configuring!");
+    
+    fsm_.fireEvent("ConfigureDone",this);
+  }
+  catch (xcept::Exception &e) {
+    std::string msg = "configuring FAILED: " + (string)e.what();
+    fsm_.fireFailed(msg,this);
+  }
   
   return false;
 }
@@ -374,14 +171,19 @@ bool FUResourceBroker::configuring(toolbox::task::WorkLoop* wl)
 //______________________________________________________________________________
 bool FUResourceBroker::enabling(toolbox::task::WorkLoop* wl)
 {
-  LOG4CPLUS_INFO(log_, "Start enabling ...");
-  initTimer();
-  if (shmMode_) resourceTable_->startWorkLoop();
-  resourceTable_->sendAllocate();
-  LOG4CPLUS_INFO(log_, "Finished enabling!");
-  
-  toolbox::Event::Reference e(new toolbox::Event("EnableDone",this));
-  fsm_.fireEvent(e);
+  try {
+    LOG4CPLUS_INFO(log_, "Start enabling ...");
+    initTimer();
+    if (shmMode_) resourceTable_->startWorkLoop();
+    resourceTable_->sendAllocate();
+    LOG4CPLUS_INFO(log_, "Finished enabling!");
+    
+    fsm_.fireEvent("EnableDone",this);
+  }
+  catch (xcept::Exception &e) {
+    std::string msg = "enabling FAILED: " + (string)e.what();
+    fsm_.fireFailed(msg,this);
+  }
   
   return false;
 }
@@ -390,17 +192,22 @@ bool FUResourceBroker::enabling(toolbox::task::WorkLoop* wl)
 //______________________________________________________________________________
 bool FUResourceBroker::stopping(toolbox::task::WorkLoop* wl)
 {
-  LOG4CPLUS_INFO(log_, "Start stopping :) ...");
-  while (resourceTable_->nbDiscarded()<resourceTable_->nbCompleted()) {
-    LOG4CPLUS_INFO(log_,"Waiting for events to be consumed ...");
-    ::sleep(1);
+  try {
+    LOG4CPLUS_INFO(log_, "Start stopping :) ...");
+    while (resourceTable_->nbDiscarded()<resourceTable_->nbCompleted()) {
+      LOG4CPLUS_INFO(log_,"Waiting for events to be consumed ...");
+      ::sleep(1);
+    }
+    stopTimer();
+    resourceTable_->shutDownClients();
+    LOG4CPLUS_INFO(log_, "Finished stopping!");
+    
+    fsm_.fireEvent("StopDone",this);
   }
-  stopTimer();
-  resourceTable_->shutDownClients();
-  LOG4CPLUS_INFO(log_, "Finished stopping!");
-  
-  toolbox::Event::Reference e(new toolbox::Event("StopDone",this));
-  fsm_.fireEvent(e);
+  catch (xcept::Exception &e) {
+    std::string msg = "stopping FAILED: " + (string)e.what();
+    fsm_.fireFailed(msg,this);
+  }
   
   return false;
 }
@@ -409,33 +216,46 @@ bool FUResourceBroker::stopping(toolbox::task::WorkLoop* wl)
 //______________________________________________________________________________
 bool FUResourceBroker::halting(toolbox::task::WorkLoop* wl)
 {
-  LOG4CPLUS_INFO(log_, "Start halting ...");
-  while (resourceTable_->nbDiscarded()<resourceTable_->nbCompleted()) {
-    LOG4CPLUS_INFO(log_,"Waiting for events to be consumed ...");
-    ::sleep(1);
+  try {
+    LOG4CPLUS_INFO(log_, "Start halting ...");
+    while (resourceTable_->nbDiscarded()<resourceTable_->nbCompleted()) {
+      LOG4CPLUS_INFO(log_,"Waiting for events to be consumed ...");
+      ::sleep(1);
+    }
+    stopTimer();
+    resourceTable_->shutDownClients();
+    UInt_t count = 0;
+    while (count<10) {
+      if (resourceTable_->nbShmClients()==0) {
+	delete resourceTable_;
+	resourceTable_=0;
+	LOG4CPLUS_INFO(log_,++count<<". try to destroy resource table succeeded!");
+	break;
+      }
+      else {
+	LOG4CPLUS_WARN(log_,++count<<". try to destroy resource table failed ...");
+	::sleep(2);
+      }
+    } 
+    if (0!=resourceTable_) LOG4CPLUS_ERROR(log_,"Failed to destroy resource table.");
+    LOG4CPLUS_INFO(log_, "Finished halting!");
+    
+    fsm_.fireEvent("HaltDone",this);
   }
-  stopTimer();
-  resourceTable_->shutDownClients();
-  UInt_t count = 0;
-  while (count<10) {
-    if (resourceTable_->nbShmClients()==0) {
-      delete resourceTable_;
-      resourceTable_=0;
-      LOG4CPLUS_INFO(log_,++count<<". try to destroy resource table succeeded!");
-      break;
-    }
-    else {
-      LOG4CPLUS_WARN(log_,++count<<". try to destroy resource table failed ...");
-      ::sleep(2);
-    }
-  } 
-  if (0!=resourceTable_) LOG4CPLUS_ERROR(log_,"Failed to destroy resource table.");
-  LOG4CPLUS_INFO(log_, "Finished halting!");
-  
-  toolbox::Event::Reference e(new toolbox::Event("HaltDone",this));
-  fsm_.fireEvent(e);
+  catch (xcept::Exception &e) {
+    std::string msg = "halting FAILED: " + (string)e.what();
+    fsm_.fireFailed(msg,this);
+  }
   
   return false;
+}
+
+
+//______________________________________________________________________________
+xoap::MessageReference FUResourceBroker::fsmCallback(xoap::MessageReference msg)
+  throw (xoap::exception::Exception)
+{
+  return fsm_.commandCallback(msg);
 }
 
 
@@ -634,7 +454,7 @@ void FUResourceBroker::exportParameters()
   gui_->addMonitorParam("class",              &class_);
   gui_->addMonitorParam("instance",           &instance_);
   gui_->addMonitorParam("runNumber",          &runNumber_);
-  gui_->addMonitorParam("stateName",          &stateName_);
+  gui_->addMonitorParam("stateName",           fsm_.stateName());
   gui_->addMonitorParam("nbShmClients",       &nbShmClients_);
 
   gui_->addMonitorParam("nbMBTot",            &nbMBTot_);
@@ -666,8 +486,7 @@ void FUResourceBroker::exportParameters()
   gui_->addStandardParam("buClassName",       &buClassName_);
   gui_->addStandardParam("buInstance",        &buInstance_);
   gui_->addStandardParam("queueSize",         &queueSize_);
-  //gui_->addStandardParam("rcmsStateListener", rcmsStateNotifier_.getRcmsStateListenerParameter());
-  gui_->addStandardParam("foundRcmsStateListener", rcmsStateNotifier_.getFoundRcmsStateListenerParameter());
+  gui_->addStandardParam("foundRcmsStateListener",fsm_.foundRcmsStateListener());
 
   gui_->addDebugCounter("nbAllocateSent",     &nbAllocateSent_);
   gui_->addDebugCounter("nbTakeReceived",     &nbTakeReceived_);
